--- a/internal-net/nginx.conf
+++ b/internal-net/nginx.conf
@@ -9,7 +9,7 @@ http {
 
     upstream backend {
         least_conn;
-        server 192.168.1.106:8080;  # feste IP vom Backend
+        server 192.168.1.106:8080;
         server 192.168.1.107:8080;
         server 192.168.1.108:8080;
     }
@@ -19,6 +19,7 @@ http {
 
         location / {
             proxy_pass http://frontend;
+            error_page 404 = /index.html;
         }
 
         location /api/ {
