--- a/internal-net/backend/src/main/resources/application.yml
+++ b/internal-net/backend/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   application:
     name: honeypot-harbor-backend
-
   datasource:
     url: jdbc:postgresql://192.168.1.101:5432/${POSTGRES_DB}
     username: ${POSTGRES_USER}
@@ -9,10 +8,11 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
         hibernate:
           format_sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+
