--- a/internal-net/logstash/pipeline/logstash.conf
+++ b/internal-net/logstash/pipeline/logstash.conf
@@ -12,6 +12,13 @@ filter {
     }
   }
 
+  #Edge Case: Set honeypot_id to "unknown" if no honeypot_id is given
+  if ![honeypot_id] {
+    mutate {
+      add_field => { "honeypot_id" => "unknown" }
+    }
+  }
+
   # Set @timestamp to the timestamp received from Cowrie/Filebeat
   if [timestamp] {
     date {
@@ -35,7 +42,7 @@ output {
     hosts => ["http://192.168.1.102:9200"]
     user => "elastic" # Should be changed to an env variable in the future
     password => "${ELASTIC_PASSWORD}"
-    index => "cowrie-%{+YYYY.MM.dd}"
+    index => "%{honeypot_id}-%{+YYYY.MM.dd}"
   }
 
   stdout { codec => rubydebug }
