add spring boot healthcheck (exclude check for elastic search)

--- a/internal-net/backend/src/main/resources/application.yml
+++ b/internal-net/backend/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+management:
+  health:
+    elasticsearch:
+      enabled: false
