--- a/internal-net/frontend/package.json
+++ b/internal-net/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
