--- a/internal-net/docker-compose.yml
+++ b/internal-net/docker-compose.yml
@@ -93,14 +93,13 @@ services:
     #ports: 
     # - "8080:8080"
     environment:
-      - API_KEY=${VUE_APP_API_KEY}
+      - API_KEY=${API_KEY}
       - SECRET_KEY=${SECRET_KEY}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - POSTGRES_DB=${POSTGRES_NAME}
       - POSTGRES_USER=${POSTGRES_ADMIN_USER}
       - POSTGRES_PASSWORD=${POSTGRES_ADMIN_PASS}
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--header=x-api-key: ${VUE_APP_API_KEY}", "http://localhost:8080/actuator/health"]
+      test: ["CMD", "wget", "--spider", "--header=x-api-key: ${API_KEY}", "http://localhost:8080/actuator/health"]
       interval: 5s
       timeout: 2s
       retries: 20
@@ -117,14 +116,13 @@ services:
     #ports: 
     # - "8080:8080"
     environment:
-      - API_KEY=${VUE_APP_API_KEY}
+      - API_KEY=${API_KEY}
       - SECRET_KEY=${SECRET_KEY}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - POSTGRES_DB=${POSTGRES_NAME}
       - POSTGRES_USER=${POSTGRES_ADMIN_USER}
       - POSTGRES_PASSWORD=${POSTGRES_ADMIN_PASS}
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--header=x-api-key: ${VUE_APP_API_KEY}", "http://localhost:8080/actuator/health"]
+      test: ["CMD", "wget", "--spider", "--header=x-api-key: ${API_KEY}", "http://localhost:8080/actuator/health"]
       interval: 5s
       timeout: 2s
       retries: 20
@@ -141,14 +139,13 @@ services:
     #ports: 
     # - "8080:8080"
     environment:
-      - API_KEY=${VUE_APP_API_KEY}
+      - API_KEY=${API_KEY}
       - SECRET_KEY=${SECRET_KEY}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - POSTGRES_DB=${POSTGRES_NAME}
       - POSTGRES_USER=${POSTGRES_ADMIN_USER}
       - POSTGRES_PASSWORD=${POSTGRES_ADMIN_PASS}
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--header=x-api-key: ${VUE_APP_API_KEY}", "http://localhost:8080/actuator/health"]
+      test: ["CMD", "wget", "--spider", "--header=x-api-key: ${API_KEY}", "http://localhost:8080/actuator/health"]
       interval: 5s
       timeout: 2s
       retries: 20
@@ -212,7 +209,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     environment:
-      - API_KEY=${VUE_APP_API_KEY}
+      - API_KEY=${API_KEY}
     depends_on:
       - frontend-1
       - frontend-2
