Implement AnalyticsService functions

--- a/internal-net/backend/pom.xml
+++ b/internal-net/backend/pom.xml
@@ -38,6 +38,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>co.elastic.clients</groupId>
+    		<artifactId>elasticsearch-java</artifactId>
+    		<version>9.1.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents.client5</groupId>
+		    <artifactId>httpclient5</artifactId>
+			<version>5.4.4</version>
+		</dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
