--- a/internal-net/backend/src/main/resources/application.yml
+++ b/internal-net/backend/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+  elasticsearch:
+    uris: http://${ELASTIC_IP}:9200
+    username: ${ELASTIC_USER}
+    password: ${ELASTIC_PASSWORD}
+    
 management:
   health:
     elasticsearch:
