Display Counts, Top Pass/usr and attacks per time in dashboard from api call

--- a/internal-net/backend/src/main/resources/application.yml
+++ b/internal-net/backend/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   elasticsearch:
-    uris: http://${ELASTIC_IP}:9200
+    uris: http://192.168.1.102:9200
     username: ${ELASTIC_USER}
     password: ${ELASTIC_PASSWORD}
     
