Implement Springboot Service method getLocationForHoneypot()

--- a/internal-net/logstash/pipeline/logstash.conf
+++ b/internal-net/logstash/pipeline/logstash.conf
@@ -12,7 +12,7 @@ filter {
     }
   }
 
-  #Edge Case: Set honeypot_id to "unknown" if no honeypot_id is given
+  # Edge Case: Set honeypot_id to "unknown" if no honeypot_id is given
   if ![honeypot_id] {
     mutate {
       add_field => { "honeypot_id" => "unknown" }
@@ -33,6 +33,15 @@ filter {
     rename => { "dst_ip" => "destination_ip" }
     rename => { "src_port" => "source_port" }
     rename => { "dst_port" => "destination_port" }
+  }
+
+  # Set up GeoIP
+  if [source_ip] {
+    geoip {
+      source => "source_ip"
+      target => "geoip"
+      database => "/usr/share/logstash/geoip/GeoLite2-City.mmdb"
+    }
   }
 }
 
