--- a/internal-net/docker-compose.yml
+++ b/internal-net/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./logstash/geoip:/usr/share/logstash/geoip
     depends_on:
       - elasticsearch
     #ports: 
@@ -59,6 +60,7 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./logstash/geoip:/usr/share/logstash/geoip
     depends_on:
       - elasticsearch
     #ports: 
@@ -76,6 +78,7 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./logstash/geoip:/usr/share/logstash/geoip
     depends_on:
       - elasticsearch
     #ports: 
