--- a/internal-net/internal.env.template
+++ b/internal-net/internal.env.template
@@ -1,13 +1,12 @@
 COMPOSE_PROJECT_NAME=honeypotharbor
 
 # Postgres
-POSTGRES_NAME=honeypotharbor
-POSTGRES_ADMIN_USER=honeypot
-POSTGRES_ADMIN_PASS=harbor
+POSTGRES_NAME=
+POSTGRES_ADMIN_USER=
+POSTGRES_ADMIN_PASS=
 
 # Elasticsearch
-ELASTIC_USER=honeypot
-ELASTIC_PASSWORD=honeypotharbor
+ELASTIC_PASSWORD=
 
 API_KEY="" # needs to be the same as in frontend/.env
 SECRET_KEY="" # used for JWT generation
