--- a/internal-net/nginx.conf
+++ b/internal-net/nginx.conf
@@ -25,7 +25,7 @@ http {
             proxy_pass http://backend;
 
             #failover
-            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream error timeout invalid_header http_500 http_503 http_504;
             proxy_next_upstream_tries 3;   # Try up to 3 servers
             proxy_connect_timeout 2s; # timelimit till  connection needs to be established
             proxy_read_timeout 15s; # timelimit till backend answers (tcp connection exists)
